--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,13 +160,13 @@ services:
   todo-view:
     container_name: todo-view
     build:
-      context: ./todo-view
-      dockerfile: Dockerfile.dev
+      context: ./todo-react-view
+      dockerfile: Dockerfile
     image: todo-view:1.0
     ports:
       - 4200:4200
     volumes:
-      - ${PWD}/todo-view:/usr/src/app
+      - ${PWD}/todo-react-view:/usr/src/app
       - /usr/src/app/node_modules
     depends_on:
       - todo-api-gateway
