--- a/todo-react-view/Dockerfile.prod
+++ b/todo-react-view/Dockerfile.prod
@@ -17,7 +17,7 @@ EXPOSE 8080
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
 COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
 
-RUN addgroup www-data && adduser -S -D -g "" www-data www-data
+# RUN addgroup www-data && adduser -S -D -g "" www-data www-data --exists
 
 RUN touch /var/run/nginx.pid && \
     chown -R www-data:www-data /var/run/nginx.pid && \
