Add startup command to docker-compose production file
The updated docker-compose.prod.yml file now includes a startup command for the image. This command executes a shell script which is housed in the specified path within the Docker container.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,7 @@ services:
     build:
       dockerfile: ../Dockerfile.nodejs.prod
     image: sieskasz/todo-cache-ingestion:1.0
+    command: sh /home/node/app/start.sh
 
   todo-cache-service:
     build:
