Update server port and Dockerfile in production configuration
The server port in the Vite configuration for the todo-react-view has been changed from 4200 to 4201. Additionally, the Dockerfile reference for the todo-view service in the docker-compose.prod.yml file has been updated to Dockerfile.prod, providing a specific configuration for production environment.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,10 +45,9 @@ services:
     image: sieskasz/todo-api-gateway:1.0
     command: sh /home/node/app/start.sh
 
-
   todo-view:
     build:
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     image: sieskasz/todo-view:1.0
     ports:
       - "4201:8080"
