Update Dockerfile path in production configuration
The path to the Dockerfile in the production configuration of the 'todo-view' service has been updated to point to the `./todo-react-view/Dockerfile.prod`. This change ensures the service uses the correct configuration tailored for the production environment.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,7 +47,7 @@ services:
 
   todo-view:
     build:
-      dockerfile: Dockerfile.prod
+      dockerfile: ./todo-react-view/Dockerfile.prod
     image: sieskasz/todo-view:1.0
     ports:
       - "4201:8080"
