--- a/todo-react-view/Dockerfile.prod
+++ b/todo-react-view/Dockerfile.prod
@@ -10,18 +10,19 @@ COPY . .
 RUN npm run build
 
 # -- PROD RUN PHASE --
-FROM node:20.10.0-alpine
+FROM nginx:1.15.9-alpine
 
 EXPOSE 8080
 
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
+
 COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
 
-# -- exits dont need to be set, as the user is already created by the base image --
-# RUN addgroup www-data && adduser -S -D -g "" www-data www-data
+RUN addgroup www-data
+RUN adduser -S -H -g "" -G www-data www-data
 
-# RUN touch /var/run/nginx.pid && \
-#     chown -R www-data:www-data /var/run/nginx.pid && \
-#     chown -R www-data:www-data /var/cache/nginx
+RUN touch /var/run/nginx.pid && \
+ chown -R www-data:www-data /var/run/nginx.pid && \
+ chown -R www-data:www-data /var/cache/nginx
 
-# USER www-data
+USER www-data
