Rename ci-workflow.yml file location
The ci-workflow.yml file has been moved from a singular-named directory "workflow" to its plural form "workflows". This name change better reflects the directory's function in containing multiple workflow files.

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -30,12 +30,11 @@ jobs:
 
       - name: Build Docker Images
         run: |
-          docker build ./todo-view -f ./todo-view/Dockerfile.dev -t sieskasz/todo-view-test
+          docker build ./todo-react-view -f ./todo-react-view/Dockerfile.dev -t  
           docker build ./todo-cache-service -f Dockerfile.nodejs.dev -t sieskasz/todo-cache-service-test
 
       - name: Run Tests
         run: |
-          docker run sieskasz/todo-view-test npm test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
           docker run sieskasz/todo-cache-service-test npm test
 
       - name: Build and Push Production Images
