Rename ci-workflow.yml file location
The ci-workflow.yml file has been moved from a singular-named directory "workflow" to its plural form "workflows". This name change better reflects the directory's function in containing multiple workflow files.

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Docker Images
         run: |
-          docker build ./todo-react-view -f ./todo-react-view/Dockerfile.dev -t  
+          docker build ./todo-react-view -f ./todo-react-view/Dockerfile.dev
           docker build ./todo-cache-service -f Dockerfile.nodejs.dev -t sieskasz/todo-cache-service-test
 
       - name: Run Tests
